[tool.poetry]
name = "roadblock"
version = "0.0.1"
description = ""
authors = ["RainingComputers <vishnu.vish.shankar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.7"
graphviz = "^0.20.1"
pygame = "^2.4.0"
numpy = "^1.24.3"
colorama = "^0.4.6"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"
flake8 = "^6.0.0"
mypy = "^1.1.1"
python-lsp-server = {extras = ["all"], version = "^1.7.3"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
